<resources>
    <string name="app_name">MoviePhone</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_to_moviephone">Welcome to MoviePhone!</string>
    <string name="inputText">Enter a movie here</string>
    <string name="clear_search_results">Clear Search Results</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="Starring">Starring</string>
    <string name="synopsis">Synopsis</string>
    <string name="age_rating">Age rating</string>
    <string name="view_showtime_in_browser">View showtime in browser</string>
    <string name="learn_more">Learn More ></string>
    <string name="movie_poster">Movie Poster</string>
    <string name="view_showtimes_in_browser">View showtimes in browser</string>
    <string name="popular_new_movies">Popular New Movies</string>
    <string name="see_all_movies_now_playing">see all movies now playing</string>
    <string name="see_all_movies_coming_soon">see all movies coming soon</string>
    <string name="share">Share</string>
</resources>
