<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/base"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/roboto"
            android:text="@string/title"
            android:textColor="#fff"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="200dp"
            android:layout_height="300dp"
            style="@style/CardView.Light"
            android:layout_margin="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:background="#888888"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:srcCompat="@drawable/gradient"
                android:layout_gravity="bottom"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="@font/roboto"
            android:text="@string/age_rating"
            android:textColor="#fff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            android:padding="10dp"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/detailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="@font/roboto"
            android:text="@string/Starring"
            android:textColor="#fff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rating"
            android:padding="10dp"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="@font/roboto"
            android:text="@string/synopsis"
            android:textColor="#fff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailTextView"
            android:padding="10dp"
            android:textSize="20sp"
           />

        <Button
            android:id="@+id/movieLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="#fff"
            android:textSize="15sp"
            android:text="@string/view_showtimes_in_browser"
            app:layout_constraintTop_toBottomOf="@+id/synopsis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/colorAccent"
            android:padding="15dp"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>