<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/base"
            android:layout_marginBottom="12dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:layout_alignParentStart="true"
                android:scaleType="centerCrop"
                android:background="#888888"
                android:layout_marginBottom="12dp"
                android:contentDescription="@string/movie_poster" />

            <TextView
                android:id="@+id/textView"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="bottom"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/roboto"
                android:text="@string/title"
                android:textColor="#fff"
                android:textSize="28sp" />

            <TextView
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="bottom"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="150dp"
                android:layout_marginRight="12dp"
                android:fontFamily="@font/roboto"
                android:text="@string/learn_more"
                android:textColor="#fff"
                android:background="@color/colorAccent"
                android:padding="7dp"
                android:textSize="15sp"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>